# Formals_Practicum

./: .gitignore  CMakeLists.txt  README.md  constants.h  handler.h  node.h  run.sh  run_checker.sh  solve.cpp
coverage/: CMakeLists.txt
src/node_src/: node.cpp  (+1 more)
tests/: CMakeLists.txt  tests.h
tests/tests_build/: CMakeCache.txt  CTestTestfile.cmake  CoverageForGoogleTests  Makefile  cmake_install.cmake
tests/tests_build/Testing/Temporary/: CTestCostData.txt
tests/tests_build/lcoverage/: index-sort-f.html  index-sort-l.html  index.html  main_coverage.info
tests/tests_build/lcoverage/9/: index-sort-f.html  index-sort-l.html  index.html  new.func-sort-c.html  new.func.html  new.gcov.html
tests/tests_build/lcoverage/9/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  deque.tcc.func-sort-c.html  deque.tcc.func.html  deque.tcc.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  stl_algobase.h.func-sort-c.html  stl_algobase.h.func.html  stl_algobase.h.gcov.html  stl_construct.h.func-sort-c.html  stl_construct.h.func.html  stl_construct.h.gcov.html  stl_deque.h.func-sort-c.html  stl_deque.h.func.html  stl_deque.h.gcov.html  stl_iterator_base_funcs.h.func-sort-c.html  stl_iterator_base_funcs.h.func.html  stl_iterator_base_funcs.h.gcov.html  stl_iterator_base_types.h.func-sort-c.html  (+5 more)
tests/tests_build/lcoverage/9/ext/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  type_traits.h.func-sort-c.html  type_traits.h.func.html  type_traits.h.gcov.html
(+47 files in other folders)
